--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
                     <h2>Connected Users</h2>
                     <div id="connectedUsers">0</div>
                 </div>
+                
+                <div class="controls">
+                    <button id="connectBtn" class="btn btn-connect">Connect</button>
+                    <button id="disconnectBtn" class="btn btn-disconnect" disabled>Disconnect</button>
+                    <div id="connectionStatus" class="status">Disconnected</div>
+                </div>
             </div>
         </div>
         
