add connect as work in progress

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
                     <div id="connectedUsers">0</div>
                 </div>
                 
-                <div class="controls">
-                    <button id="connectBtn" class="btn btn-connect">Connect</button>
-                    <button id="disconnectBtn" class="btn btn-disconnect" disabled>Disconnect</button>
-                    <div id="connectionStatus" class="status">Disconnected</div>
+                <div class="wip-controls">
+                    <h3>Work in Progress</h3>
+                    <button class="btn btn-wip" disabled>Connect</button>
+                    <button class="btn btn-wip" disabled>Disconnect</button>
                 </div>
             </div>
         </div>
