Send client ID upon connection and update header title in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div>
-                <h1>VISTA Signaling Server</h1>
+                <h1>Signaling Server</h1>
                 <div class="stats">
                     <h2>Connected Users</h2>
                     <div id="connectedUsers">0</div>
