--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VistaXR Signaling Server</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="header">
-            <div>
-                <h1>Signaling Server</h1>
-                <div class="stats">
-                    <h2>Connected Users</h2>
-                    <div id="connectedUsers">0</div>
-                </div>
-                
-                <div class="wip-controls">
-                    <h3>Work in Progress</h3>
-                    <button class="btn btn-wip" disabled>Connect</button>
-                    <button class="btn btn-wip" disabled>Disconnect</button>
-                </div>
-            </div>
+      <div class="header">
+        <div>
+          <h1>Signaling Server</h1>
+          <div class="stats">
+            <h2>Connected Users</h2>
+            <div id="connectedUsers">0</div>
+          </div>
+
+          <div class="wip-controls">
+            <h3>Work in Progress</h3>
+            <button class="btn btn-wip" disabled>Connect</button>
+            <button class="btn btn-wip" disabled>Disconnect</button>
+          </div>
         </div>
-        
-        <div class="log-container">
-            <div class="log-title">Server Log</div>
-            <div id="logEntries"></div>
-        </div>
+      </div>
+
+      <div class="log-container">
+        <div class="log-title">Server Log</div>
+        <div id="logEntries"></div>
+      </div>
     </div>
 
     <script src="dashboard.js"></script>
-</body>
+  </body>
 </html>
